# hob2d

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICES.md  README.md  vcpkg.json
assets/builtin/shaders/: blit.frag.hlsl  debug_text.frag.hlsl  debug_text.vert.hlsl  sprite.frag.hlsl  sprite.vert.hlsl  ui.frag.hlsl
assets/builtin/ui/: base.rcss
assets/shaders/: distort.frag.hlsl  outline.frag.hlsl  psychedelic.frag.hlsl
assets/ui/: counter.rcss  counter.rml  enemy_healthbar.rcss  healthbar.rcss  test.rcss  test.rml
config/: engine_config.json
content/engine/assets/shaders/: line.vert.hlsl
content/engine/scripts/: collision.lua  component_schemas.generated.lua  entity_def.lua  factory_def.lua  factory_schemas.generated.lua
content/engine/scripts/lib/: lldebugger.lua
content/engine/scripts/meta/: bindings_meta.generated.lua  factory_schemas_meta.generated.lua  path_schemas_meta.generated.lua
content/projects/: .gitignore
content/projects/sandbox/assets/shaders/: distort.frag.hlsl  distort.vert.hlsl  outline.frag.hlsl
content/projects/sandbox/assets/ui/: enemy_healthbar.rml  healthbar.rml
content/projects/sandbox/scripts/assets/: animations.lua
content/projects/sandbox/scripts/components/: contact_comp.lua  enemy_health_comp.lua  player_comp.lua
content/projects/sandbox/scripts/entities/: camera_entity.lua  shape_entities.lua
content/projects/sandbox/scripts/meta/: component_registry_meta.generated.lua  entity_registry_meta.generated.lua  factory_aliases_meta.generated.lua
docs/: demos.js  index.html  styles.css
engine/assets/shaders/: blit.vert.hlsl  sprite.vert.hlsl  ui.vert.hlsl
engine/scripts/: asset_def.lua  bootstrap.lua  component_schemas.generated.lua  factory_schemas.generated.lua  hot_reload.lua  unwrap.lua
engine/scripts/meta/: bindings_meta.generated.lua  factory_schemas_meta.generated.lua  path_schemas_meta.generated.lua
projects/sandbox/config/: engine_config.json  input_config.json
projects/sandbox/scripts/assets/: audio.lua  shaders.lua
projects/sandbox/scripts/components/: character_comp.lua  player_comp.lua
projects/sandbox/scripts/entities/: camera_entity.lua  enemy_entity.lua  player_entity.lua
scripts/: main.lua
scripts/engine/: asset_def.lua  bootstrap.lua  component_def.lua  entity_def.lua  factory_def.lua  factory_schemas.generated.lua  hot_reload.lua  path_schemas.generated.lua
scripts/engine/meta/: bindings_meta.generated.lua  factory_aliases_meta.generated.lua  factory_schemas_meta.generated.lua  lua_component_meta.lua  path_aliases_meta.generated.lua  path_schemas_meta.generated.lua  shader_params_meta.generated.lua
scripts/game/assets/: assets.lua  materials.lua  textures.lua
scripts/game/components/: enemy_health_comp.lua  player_comp.lua
scripts/game/entities/: enemy_entity.lua  player_entity.lua
src/: main.cpp
src/engine/animation/: animation_clip.h  animation_track.cpp  animation_track.h
src/engine/components/: audio_component.cpp  audio_component.h  camera_component.cpp  camera_component.h  component.cpp  component.h  input_component.cpp  input_component.h  lua_script_component.cpp  lua_script_component.h  sockets_component.cpp  sockets_component.h  sprite_animator_component.cpp  sprite_animator_component.h  sprite_component.cpp  sprite_component.h  transform_component.cpp  transform_component.h
src/engine/components/physics/: box_collider_component.cpp  capsule_collider_component.cpp  character_body_component.cpp  character_body_component.h  circle_collider_component.cpp  collider_component.cpp  collider_component.h  rigidbody_component.cpp  rigidbody_component.h
src/engine/core/: aspect_mode.cpp  aspect_mode.h  assert.h  debug.cpp  debug.h  engine.cpp  engine.h  engine_config.cpp  engine_config.h  logging.cpp  logging.h  path_utils.cpp  path_utils.h  screen_match_mode.cpp  screen_match_mode.h
src/engine/core/systems/: console.cpp  console.h  entity_spawner.cpp  entity_spawner.h  imgui_system.cpp  imgui_system.h  input.cpp  input.h  input_config.cpp  input_config.h  physics.cpp  physics.h  sdl_context.cpp  sdl_context.h  timer.cpp  timer.h
src/engine/core/systems/audio/: audio.cpp  audio.h  audio_clip.cpp  audio_clip.h
src/engine/core/systems/renderer/: font.cpp  font.h  material.cpp  material.h  renderer.cpp  renderer.h  renderer_debug.cpp  renderer_passes.cpp  renderer_pipelines.cpp  renderer_resources.cpp  sampler.cpp  sampler.h  shader.cpp  shader.h  shader_reflection.cpp  shader_reflection.h  sprite_draw_data.h  texture.cpp  texture.h
src/engine/core/systems/scripting/: lua_bind_assets.cpp  lua_bind_audio.cpp  lua_bind_camera.cpp  lua_bind_components.cpp  lua_bind_debug.cpp  lua_bind_entity.cpp  lua_bind_entity_spawner.cpp  lua_bind_helpers.cpp  lua_bind_input.cpp  lua_bind_logging.cpp  lua_bind_math.cpp  lua_bind_physics.cpp  lua_bind_renderer.cpp  lua_bind_renderer.h  lua_bind_scripts.cpp  lua_bind_systems.cpp  lua_bind_timer.cpp  lua_bind_ui.cpp  lua_dump_meta.cpp  lua_dump_schemas.cpp  lua_meta.cpp  lua_meta.h  lua_schema_component.cpp  lua_schema_component.h  lua_schema_factory.cpp  lua_schema_factory.h  lua_schema_path.cpp  lua_schema_path.h  lua_script_system.cpp  lua_script_system.h  lua_type_names.h
src/engine/core/systems/ui/: ui_file_interface.cpp  ui_file_interface.h  ui_render_interface.cpp  ui_render_interface.h  ui_screen_match_mode.cpp  ui_screen_match_mode.h  ui_system.cpp  ui_system.h  ui_system_interface.cpp  ui_system_interface.h
src/engine/entity/: entity.cpp  entity.h  entity_ref.cpp  entity_ref.h
src/engine/math/: matrix4x4.h  vector2.h
tools/: clang_format.bat  clang_format.ps1  clang_format.sh  count_lines.py
